manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngo-service
  namespace: solidarytech-ngo
  labels:
    app.kubernetes.io/name: ngo-service
    app.kubernetes.io/component: ngo
    app.kubernetes.io/part-of: solidarytech
spec:
  type: ClusterIP
  selector:
    app: ngo-service
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
